--- a/src/stylesheets/header.css
+++ b/src/stylesheets/header.css
@@ -2,5 +2,9 @@
 .header{
   display: flex;
   align-items: baseline;
-  justify-content: space-around;
+  justify-content: space-between;
+  width: 100%;
+  height: 83px;
+  border: 1px solid black;
+  background: #FFFFFF;
 }
