--- a/src/stylesheets/header.css
+++ b/src/stylesheets/header.css
@@ -5,6 +5,6 @@
   justify-content: space-between;
   width: 100%;
   height: 83px;
-  border: 1px solid black;
+  border: none;
   background: #FFFFFF;
 }
