--- a/src/stylesheets/navbar_icons.css
+++ b/src/stylesheets/navbar_icons.css
@@ -1,6 +1,8 @@
 .navbar_icons{
   display: flex;
-  width: 20%;
+  justify-content: flex-end;
+  padding-right: 30px;
+  width: 15%;
   gap: 19px;
 }
 .navbar__icon{
