--- a/src/stylesheets/search_bar.css
+++ b/src/stylesheets/search_bar.css
@@ -1,22 +1,22 @@
 .header__searchbar-container {
-  width: 40%;
-  height: 51px;
+  width: 50%;
   position: relative;
+  color: red;
+  cursor: pointer;
 }
 
 .header__searchbar-container i {
   position: absolute;
-  top: 25px;
+  top: 15px;
   left: 15px;
   color: #c3c0c0;
 }
 
 .header__searchbar-container input {
-  background: #ffffff;
-  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
-  border-radius: 32px;
   width: 100%;
   height: 100%;
+  padding: 16px 16px 16px 40px;
+  background: #EFEFEF;
+  border-radius: 24px;
   border: none;
-  padding: 10.5px 16px 10.5px 35px;
 }
